@@ -1569,8 +1569,11 @@ void KMComposeWin::slotSpellcheck2(KSpell*)
 
 
 //-----------------------------------------------------------------------------
-void KMComposeWin::slotSpellResult(char* aNewText)
+void KMComposeWin::slotSpellResult(char *aNewText)
 {
+  // prevent warning
+  (void)aNewText;
+
 #ifdef HAS_KSPELL
   mEditor->setText(aNewText);
   mEditor->setReadOnly(FALSE);
@@ -1584,6 +1587,11 @@ void KMComposeWin::slotSpellResult(char* aNewText)
 void KMComposeWin::slotSpellCorrected(char *originalword, 
 				      char *newword, long pos)
 {
+  // prevent warning
+  (void)originalword;
+  (void)newword;
+  (void)pos;
+
 #ifdef HAS_KSPELL
   //we'll reselect the original word in case the user has played with
   //the selection in eframe or the word was auto-replaced
@@ -1617,6 +1625,10 @@ void KMComposeWin::slotSpellCorrected(char *originalword,
 //-----------------------------------------------------------------------------
 void KMComposeWin::slotSpellMispelling(char *word, QStrList *, long pos)
 {
+  // prevent warning
+  (void)word;
+  (void)pos;
+
 #ifdef HAS_KSPELL
   int l, cnt=0;
 
@@ -1663,6 +1675,13 @@ void KMComposeWin::slotConfigureCharsets()
 void KMComposeWin::slotSetCharsets(const char *message,const char *composer,
                                    bool ascii,bool quote,bool def)
 {
+  // prevent warning
+  (void)message;
+  (void)composer;
+  (void)ascii;
+  (void)quote;
+  (void)def;
+
 #ifdef CHARSETS
   mCharset=message;
   m7BitAscii=ascii;
